# stratbox

./: .gitignore  DELETE_FILES.txt  POST_APPLY_NOTES.md  POST_MERGE_CLEANUP.md  README.md  _APPLY_NOTES.txt  _DELETE_LIST.txt  banks_norm.csv  pyproject.toml
.github/workflows/: ci.yml
appdock/: distribution.json  manifest.json  preset.json
appdock-connector/: connector.json
appdock-world/: manifest.json
docs/: architecture.md  development.md  examples.md  files_catalog_methods.md  frank_rg_stage1.md  frg_stage1.md  plugin-integration.md
examples/: frg_cleanup_example.py  frg_stage1_example.py  pandas_read_excel_example.py
scripts/: cbr_archiver_example.py  check_internal_imports.py  check_release_integrity.py  escrow_example.py  frank_rg_cleanup_example.py  frank_rg_stage1_example.py  ioapi_read_excel_example.py  ioapi_write_excel_example.py  pandas_write_excel_example.py
src/app/: README.md  __init__.py  __main__.py
src/app/bootstrap/: __init__.py  app_bootstrap.py  runtime.py
src/app/chat/: __init__.py  models.py  projector.py  widgets.py  width_policy.py
src/app/core/: __init__.py  app_state.py  context.py  errors.py  handoff.py  log_setup.py  paths.py  session_env.py  user_config.py  version.py
src/app/entrypoints/: __init__.py  appdock.py
src/app/gui/: __init__.py  main.py  main_window.py  workers.py
src/app/integrations/: __init__.py  appdock_bridge.py  platform_services.py
src/app/platform/: __init__.py
src/app/presence/: __init__.py  models.py  service.py
src/app/product/: __init__.py  catalog.py  composer.py  models.py  registry.py  runner.py
src/app/profiles/: __init__.py  diagnostics.py  filestore.py  models.py  registry.py
src/app/runs/: __init__.py  models.py  service.py  workers.py
src/app/runtime/: app_surface_state.py  bootstrap.py  config.py  context.py  paths.py  session_runtime.py  user_preferences.py
src/app/scenarios/: __init__.py  catalog.py  composer.py  models.py  registry.py  runner.py
src/app/shell/: __init__.py  main_window.py  smooth_feed_list.py
src/app/state/: __init__.py  app_surface_state.py  session_runtime.py  user_preferences.py
src/app/system/: __init__.py  commands.py
src/app/tasks/: __init__.py  models.py  registry.py  (+1 more)
src/stratbox/: README.md  __init__.py
tests/smoke/: test_core_imports.py
tests/unit/: test_examples_exist.py  test_runtime_providers.py
(+301 files in other folders)
