[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratbox"
version = "0.2.1"
description = "Strategy department toolbox (core + domains)."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
plugin = [
  "stratbox-plugin>=0.2.1",
]
pdf = [
  "pypdf>=4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stratbox.registries" = ["_resources/**/*"]
"stratbox.macrobanks.cbr_forms.models" = ["*.csv"]