[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratbox"
version = "0.2.1"
description = "Strategy department toolbox (core + domains)."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "requests>=2.31",
  "tqdm>=4.66",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
app = [
  "PySide6>=6.6",
]
plugin = [
  "stratbox-plugin>=0.2.1",
]
pdf = [
  "pypdf>=4.0",
]

[project.scripts]
stratbox-app = "app.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stratbox.registries" = ["_resources/**/*"]
"stratbox.macrobanks.cbr_forms.models" = ["*.csv"]
"app" = [
  "resources/profiles/*.json",
  "resources/tasks/*.json",
  "resources/styles/*.qss",
  "resources/icons/*",
  "resources/images/*",
]
