[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratbox"
version = "0.2.1"
description = "Strategy Box core library with business domains and neutral infrastructure."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "requests>=2.31",
  "tqdm>=4.66",
  "beautifulsoup4>=4.12",
  "dbfread>=2.0",
]

[project.optional-dependencies]
plugin = [
  "stratbox-plugin>=0.2.1",
]
pdf = [
  "pypdf>=4.0",
]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stratbox.registries" = ["_resources/**/*"]
"stratbox.macrobanks.cbr_forms.models" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
